--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio consectetur voluptatibus non.
                 </p>
                 <button>
-                    Degust Now
+                    Order now
                 </button>
             </div>
         </section>
