--- a/index.html
+++ b/index.html
@@ -42,17 +42,23 @@
 
     <!-- main section -->
     <main>
-        <section class="hero">
-            <div class="hero-content">
-                <h1><span>Piz</span><span style="color: #3c5163;">Art</span> The Better Pizza</h1>
-                <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio consectetur voluptatibus non.
-                </p>
-                <a class="btn" href="#">
-                    Order now
-                </a>
+        <section class="hero-container">
+            <div class="hero container">
+                <div class="hero-content">
+                    <h1><span>Piz</span><span style="color: #3c5163;">Art</span> The Better Pizza</h1>
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio consectetur voluptatibus non.
+                    </p>
+                    <a class="btn" href="#">
+                        Order now
+                    </a>
+                </div>
             </div>
         </section>
+        <section class="about container">
+
+        </section>
+        
 
     </main>
 
