--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <section class="hero-container">
             <div class="hero container">
                 <div class="hero-content">
-                    <h1><span>Piz</span><span style="color: #3c5163;">Art</span> The Better Pizza</h1>
+                    <h1><span>Piz</span><span style="color: #ff6b22;">Art</span> The Better Pizza</h1>
                     <p>
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio consectetur voluptatibus
                         non.
