--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <section class="hero-container">
             <div class="hero container">
                 <div class="hero-content">
-                    <h1><span>Piz</span><span style="color: #ff6b22;">Art</span> The Better Pizza</h1>
+                    <h1><span>Piz</span><span style="color: #ff742e;">Art</span> The Better Pizza</h1>
                     <p>
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio consectetur voluptatibus
                         non.
@@ -63,7 +63,7 @@
                 </div>
                 <div class="about-content ">
                     <div class="image-about flex-one">
-                        <img src="https://unsplash.it/1502" alt="About image">
+                        <img src="pizza fromage.png" alt="About image">
                     </div>
                     <div class="info-about flex-one">
                         <h2>The best pizza</h2>
