--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:image"
         content="https://images.unsplash.com/photo-1604382354936-07c5d9983bd3?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80">
 
-    <meta property="og:url" content="https://portfolio-elements.vercel.app/index.html">
+    <meta property="og:url" content="https://piz-art.vercel.app/index.html">
 
     <meta name="twitter:card" content="summary_large_image">
     <title>PizaArt</title>
