--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <title>PizaArt</title>
     <link rel="stylesheet" href="nav.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="scroll_horizontal.css">
 </head>
 
 <body>
@@ -82,6 +83,40 @@
 
             </div>
 
+        </section>
+        <section class="scroll-container">
+            <div class="scroll">
+                <div class="card fist">
+                    <img src="https://unsplash.it/1500" alt="image scroll horizontal">
+                    <a href="#" class="info-container">
+                        <h2>Title</h2>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id ab similique.Id ab.</p>
+                    </a>
+                </div>
+    
+                <div class="card">
+                    <img src="https://unsplash.it/1502" alt="image scroll horizontal">
+                    <a href="#" class="info-container">
+                        <h2>Title</h2>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id ab similique.Id ab.</p>
+                    </a>
+                </div>
+    
+                <div class="card">
+                    <img src="https://unsplash.it/1503" alt="image scroll horizontal">
+                    <a href="#" class="info-container">
+                        <h2>Title</h2>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id ab similique.Id ab.</p>
+                    </a>
+                </div>
+                <div class="card">
+                    <img src="https://unsplash.it/1504" alt="image scroll horizontal">
+                    <a href="#" class="info-container">
+                        <h2>Title</h2>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id ab similique.Id ab.</p>
+                    </a>
+                </div>
+            </div>
         </section>
 
 
