--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
                 </div>
                 <div class="about-content ">
                     <div class="image-about flex-one">
-                        <img src="pizza fromage-min.png" alt="About image">
+                        <img src="multipizza.png" class="img-mobile" alt="About image">
+
+                        <img src="pizza fromage-min.png" class="img-destop"  alt="About image">
                     </div>
                     <div class="info-about flex-one">
                         <h2>The best pizza</h2>
@@ -140,22 +142,6 @@
 
 
     </main>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     <script>
         const hamburger = document.querySelector(".hamburger")
         const linkcontainer = document.querySelector(".link-container");
