--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <meta property="og:url" content="https://piz-art.vercel.app/index.html">
 
     <meta name="twitter:card" content="summary_large_image">
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <title>PizaArt</title>
     <link rel="stylesheet" href="nav.css">
     <link rel="stylesheet" href="style.css">
@@ -27,7 +28,7 @@
             <div class="menu">
                 <div class="link-container">
                     <a href="#" class="link home">Home</a>
-                    <a href="https://card-horizontal-scroll.vercel.app/" class="link">Menu</a>
+                    <a href="#menu" class="link">Menu</a>
                     <a href="#Contact" class="link">Contact</a>
                 </div>
                 <button type="button" class="hamburger" aria-label="Toggle navigation" aria-expanded="false;">
@@ -86,9 +87,12 @@
             </div>
 
         </section>
+        
         <section class="scroll-container">
-            <!-- <h2>Menu</h2> -->
-            <div class="scroll">
+            <div class="section-title" >
+                <h2>Menu 1</h2>
+            </div>
+            <div class="scroll" id="menu">
                 <div class="card fist">
                     <img src="pizaa time jambon-min.png" alt="image scroll horizontal">
                     <a href="#" class="info-container">
@@ -112,6 +116,9 @@
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id ab similique.Id ab.</p>
                     </a>
                 </div>
+            </div>
+            <div class="section-title">
+                <h2>Menu 2</h2>
             </div>
             <div class="scroll scroll-2">
                 <div class="card fist">
